# rsi-divergence-detector

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-to-pypi.yml  release.yml
.hypothesis/constants/: 21fb97b6d798b799  2ea2577b5517ab3e  5420c399c12a2753  8e58e17dfc96ae83  a362103576508cc1  b8744930f205b507  c7f1db3e23dea761  c930f287c3e89129  e14271c914e86962
docs/source/: conf.py  index.rst  modules.rst
rsi_divergence/: __init__.py  cli.py  core.py  utils.py
tests/: __init__.py  conftest.py  test_cli.py  test_core.py  test_divergences_scenario.py  test_divergences_unit.py  test_properties.py  test_rsi_unit.py
