[tool.poetry]
name = "rsi-divergence-detector"
version = "0.1.7"
description = "A tool to detect RSI divergences in price data."
authors = ["Tomi"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/AKzar1el/rsi_divergence_detector"
keywords = ["rsi", "divergence", "finance", "trading", "technical-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment"
]

packages = [{include = "rsi_divergence"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"

# Remove the <3 pin; start at 2.2.2 (first generally compatible with NumPy 2.0; 2.2.3 adds Py 3.13 support)
pandas = ">=2.2.2"

# Allow NumPy 1.26+ (adds Python 3.12 support and permits NumPy 2.x)
numpy = ">=1.26"

# Ensure SciPy won’t block NumPy 2.x environments
scipy = ">=1.13"

typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.88.0"
mypy = "^1.5.0"
black = "^23.9.0"
flake8 = "^6.1.0"
sphinx = "^7.2.0"

[tool.poetry.scripts]
rsi_divergence = "rsi_divergence.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true
